fixed module 1 whitespace issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,7 +83,7 @@ body {
 }
 
 #search_icon {
-  transform: translateY(5px); 
+  transform: translateY(5px);
 }
 
 .selected tr {
@@ -178,10 +178,6 @@ img {
   opacity: 0.8;
 }
 
-.input_table td {
-  text-align: center;
-}
-
 .sliderValue {
   width: 3em;
 }
@@ -252,6 +248,10 @@ input{
 input[type=file]{
   font-size: 12px;
   color:#ffe8e1;
+}
+
+input[type=file]:hover{
+  transform: scale(1.01);
 }
 
 input[type=submit]{
@@ -368,9 +368,6 @@ input[type=range]::-webkit-slider-thumb:hover {
   border: 1px solid rgb(255,0,0,0.6);
 }
 
-.input_table td {
-  text-align:left;
-}
 
 #sequence_identifiers {
   background: rgb(128,128,128,0.4);
@@ -459,6 +456,14 @@ input[type=range]::-webkit-slider-thumb:hover {
 .input_table {
   color: white;
   margin: 0 auto;
+}
+
+.input_table td {
+  text-align:left;
+}
+
+#mod1_sub_table {
+  border: 1px solid #2f475f;
 }
 
  #loading_logo {
